@@ -31,6 +31,16 @@ val min : t
 val max : t
 (** [max] is U+10FFFF. *)
 
+val bom : t
+(** [bom] is U+FEFF, the
+    {{:http://unicode.org/glossary/#byte_order_mark}byte order mark} (BOM)
+    character. *)
+
+val rep : t
+(** [rep] is U+FFFD, the
+    {{:http://unicode.org/glossary/#replacement_character}replacement}
+    character. *)
+
 val succ : t -> t
 (** [succ u] is the scalar value after [u] in the set of Unicode scalar
     values.
